--- a/week8/day5/exercises/2.log_regresion_exercise.ipynb
+++ b/week8/day5/exercises/2.log_regresion_exercise.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,42 +62,79 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn import metrics\n",
     "from sklearn.metrics import r2_score, mean_absolute_error\n",
     "from sklearn import datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     sepal.length  sepal.width  petal.length  petal.width    variety\n",
+       "0             5.1          3.5           1.4          0.2     Setosa\n",
+       "1             4.9          3.0           1.4          0.2     Setosa\n",
+       "2             4.7          3.2           1.3          0.2     Setosa\n",
+       "3             4.6          3.1           1.5          0.2     Setosa\n",
+       "4             5.0          3.6           1.4          0.2     Setosa\n",
+       "..            ...          ...           ...          ...        ...\n",
+       "145           6.7          3.0           5.2          2.3  Virginica\n",
+       "146           6.3          2.5           5.0          1.9  Virginica\n",
+       "147           6.5          3.0           5.2          2.0  Virginica\n",
+       "148           6.2          3.4           5.4          2.3  Virginica\n",
+       "149           5.9          3.0           5.1          1.8  Virginica\n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sepal.length</th>\n      <th>sepal.width</th>\n      <th>petal.length</th>\n      <th>petal.width</th>\n      <th>variety</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.1</td>\n      <td>3.5</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.9</td>\n      <td>3.0</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.7</td>\n      <td>3.2</td>\n      <td>1.3</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.6</td>\n      <td>3.1</td>\n      <td>1.5</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>3.6</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>145</th>\n      <td>6.7</td>\n      <td>3.0</td>\n      <td>5.2</td>\n      <td>2.3</td>\n      <td>Virginica</td>\n    </tr>\n    <tr>\n      <th>146</th>\n      <td>6.3</td>\n      <td>2.5</td>\n      <td>5.0</td>\n      <td>1.9</td>\n      <td>Virginica</td>\n    </tr>\n    <tr>\n      <th>147</th>\n      <td>6.5</td>\n      <td>3.0</td>\n      <td>5.2</td>\n      <td>2.0</td>\n      <td>Virginica</td>\n    </tr>\n    <tr>\n      <th>148</th>\n      <td>6.2</td>\n      <td>3.4</td>\n      <td>5.4</td>\n      <td>2.3</td>\n      <td>Virginica</td>\n    </tr>\n    <tr>\n      <th>149</th>\n      <td>5.9</td>\n      <td>3.0</td>\n      <td>5.1</td>\n      <td>1.8</td>\n      <td>Virginica</td>\n    </tr>\n  </tbody>\n</table>\n<p>150 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "source": [
-    "iris = datasets.load_iris\n",
-    "print(iris)"
+    "df = pd.read_csv(\"C:\\\\Users\\\\javig\\\\OneDrive\\\\Documents\\\\Bootcamp\\\\The_Bridge_Javier\\\\BootCamp_JGAF\\\\week8\\\\day5\\\\data\\\\iris.csv\")\n",
+    "df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(150, 4)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(150,)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
    "source": [
-    "df = pd.DataFrame(iris)"
+    "X=  np.array(df.drop(['variety'], 1))\n",
+    "y =np.array(df['variety'])\n",
+    "print(X.shape)\n",
+    "y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X=\n",
-    "y ="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +150,47 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 36,
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "seed= 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\nLogistic Regression: 1.000000 (0.000000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test size 0.2\n",
     "name='Logistic Regression'\n",
-    "kfold = model_selection.KFold(n_splits=10, random_state=seed) \n",
-    "cv_results = model_selection.cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
+    "kfold = model_selection.KFold(n_splits=10, shuffle= True, random_state=seed) \n",
+    "cv_results = model_selection.cross_val_score(model, X_train, y_train, cv=kfold, scoring='accuracy')\n",
     "msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
     "print(cv_results)\n",
     "print(msg)"
@@ -132,27 +198,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.88888889 0.88888889 1.         0.88888889 0.77777778 1.\n 1.         0.88888889 1.         1.        ]\nLogistic Regression: 0.933333 (0.073703)\n"
+     ]
+    }
+   ],
    "source": [
-    "model.score()"
+    "#test size 0.4\n",
+    "name='Logistic Regression'\n",
+    "kfold = model_selection.KFold(n_splits=10, shuffle= True, random_state=seed) \n",
+    "cv_results = model_selection.cross_val_score(model, X_train, y_train, cv=kfold, scoring='accuracy')\n",
+    "msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "print(cv_results)\n",
+    "print(msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.9666666666666667"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
    "source": [
-    "df.drop(df[df['class']=='Virginica'], inplace= True)"
+    "model.score(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy: 0.9833333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "    sepal.length  sepal.width  petal.length  petal.width     variety\n",
+       "0            5.1          3.5           1.4          0.2      Setosa\n",
+       "1            4.9          3.0           1.4          0.2      Setosa\n",
+       "2            4.7          3.2           1.3          0.2      Setosa\n",
+       "3            4.6          3.1           1.5          0.2      Setosa\n",
+       "4            5.0          3.6           1.4          0.2      Setosa\n",
+       "..           ...          ...           ...          ...         ...\n",
+       "95           5.7          3.0           4.2          1.2  Versicolor\n",
+       "96           5.7          2.9           4.2          1.3  Versicolor\n",
+       "97           6.2          2.9           4.3          1.3  Versicolor\n",
+       "98           5.1          2.5           3.0          1.1  Versicolor\n",
+       "99           5.7          2.8           4.1          1.3  Versicolor\n",
+       "\n",
+       "[100 rows x 5 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sepal.length</th>\n      <th>sepal.width</th>\n      <th>petal.length</th>\n      <th>petal.width</th>\n      <th>variety</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.1</td>\n      <td>3.5</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.9</td>\n      <td>3.0</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.7</td>\n      <td>3.2</td>\n      <td>1.3</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.6</td>\n      <td>3.1</td>\n      <td>1.5</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>3.6</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Setosa</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>5.7</td>\n      <td>3.0</td>\n      <td>4.2</td>\n      <td>1.2</td>\n      <td>Versicolor</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>5.7</td>\n      <td>2.9</td>\n      <td>4.2</td>\n      <td>1.3</td>\n      <td>Versicolor</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>6.2</td>\n      <td>2.9</td>\n      <td>4.3</td>\n      <td>1.3</td>\n      <td>Versicolor</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>5.1</td>\n      <td>2.5</td>\n      <td>3.0</td>\n      <td>1.1</td>\n      <td>Versicolor</td>\n    </tr>\n    <tr>\n      <th>99</th>\n      <td>5.7</td>\n      <td>2.8</td>\n      <td>4.1</td>\n      <td>1.3</td>\n      <td>Versicolor</td>\n    </tr>\n  </tbody>\n</table>\n<p>100 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "df2 = df.loc[df['variety'] != 'Virginica']\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "\"\\nX = np.array(dataframe.drop(['clase'], 1))\\ny = np.array(dataframe['clase'])\\nX.shape\\n\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "X = np.array(dataframe.drop(['clase'], 1))\n",
@@ -163,12 +318,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(100, 4)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(100,)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
    "source": [
-    "X=\n",
-    "y ="
+    "X=  np.array(df2.drop(['variety'], 1))\n",
+    "y =np.array(df2['variety'])\n",
+    "print(X.shape)\n",
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.88888889 0.88888889 1.         0.88888889 0.77777778 1.\n 1.         0.88888889 1.         1.        ]\nLogistic Regression: 0.933333 (0.073703)\n"
+     ]
+    }
+   ],
+   "source": [
+    "name='Logistic Regression'\n",
+    "kfold = model_selection.KFold(n_splits=10,shuffle= True, random_state=seed) \n",
+    "cv_results = model_selection.cross_val_score(model, X_train, y_train, cv=kfold, scoring='accuracy')\n",
+    "msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "print(cv_results)\n",
+    "print(msg)"
    ]
   },
   {
@@ -176,14 +373,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name='Logistic Regression'\n",
-    "kfold = model_selection.KFold(n_splits=10, random_state=seed) \n",
-    "cv_results = model_selection.cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
-    "msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
-    "print(cv_results)\n",
-    "print(msg)"
-   ]
+   "source": []
   }
  ]
 }
