--- a/week8/day5/exercises/3.regression_classification_exercise.ipynb
+++ b/week8/day5/exercises/3.regression_classification_exercise.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4-final"
+   "version": "3.9.0-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599088893540",
-   "display_name": "Python 3.6.4 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.9.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "55e468aa44997b1a111e264ecfc47cca8eaefaa39ff5edd28dad934b35afc7e9"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -65,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,19 +79,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import           linear_model\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, accuracy_score\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def choose_model(option_user, params=None):\n",
+    "    # Define parameter\n",
     "    option_user= input()\n",
-    "    from sklearn import           linear_model\n",
-    "    from sklearn import model_selection\n",
-    "    from sklearn.metrics import classification_report\n",
-    "    params = {'k': 7}\n",
+    "    params = {'k': 7, 'n_splits': 10, 'random_state': 7}\n",
+    "    # nombrar los modelos\n",
     "    x = LinearRegression()\n",
     "    y = linear_model.LogisticRegression()\n",
     "    z = KNeighborsClassifier(n_neighbors=k)\n",
+    "    # que modelo se escoge\n",
     "    if option_user == 'LinearRegression':\n",
     "        model=x\n",
     "        return model\n",
@@ -100,16 +125,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, df, target_name):\n",
+    "\n",
     "    X = df.drop([target_name])\n",
     "    y = df[target_name]\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)  \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "    # Definir los distintos modelos\n",
+    "    # Definir acuracy          \n",
+    "    if model == 'LinearRegression':\n",
+    "        model_trained = model.fit(X, y)\n",
+    "        kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
+    "        cv_results = model_selection.cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
+    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "        predictions = model.predict(X_test)\n",
+    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "        return model_trained, accuracy\n",
+    "    if model == 'LogisticRegression':\n",
+    "        model.fit(X,y)\n",
+    "        kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
+    "        cv_results = model_selection.cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
+    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "        predictions = model.predict(X_test)\n",
+    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "        return model_trained, accuracy\n",
+    "    if model == 'Knn':\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "        return model_trained, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(option_user,model, df, target_name, params=None):\n",
+    "    #Invocar las funciones \n",
+    "    choose_model(option_user=option_user, params=params)\n",
+    "    train_model(model= model, df=df, target_name=target)\n",
     "    # your code\n",
-    "    return model_trained, accuracy"
+    "    print(accuracy)\n",
+    "    return model_trained"
    ]
   },
   {
@@ -168,6 +230,7 @@
    "source": [
     "def predict_new_data(model_trained, to_pred):\n",
     "    # your code\n",
+    "    y_pred = model_trained.predict(to_pred)\n",
     "    return y_pred"
    ]
   },
